# octocrab

./: Cargo.toml  ISSUES.md
examples/: github_app_authentication.rs  github_app_authentication_manual.rs
plans/: 000_wasm.md  001_http_client_wasm.md  002_async_runtime_wasm.md  003_jwt_wasm.md  004_cache_storage_wasm.md  005_tls_wasm.md  006_sync_wasm.md  007_webhook_wasm.md  008_jwt_revise.md
src/: auth.rs  body.rs  error.rs  lib.rs
src/api/: classroom.rs  markdown.rs  workflows.rs
src/api/apps/: installations.rs
src/api/commits/: associated_pull_requests.rs  compare_commit.rs  create_comment.rs
src/api/issues/: create.rs  list.rs  update.rs
src/api/orgs/: list_repos.rs
src/api/pulls/: comment.rs  create.rs  list.rs  merge.rs  update.rs
src/api/repos/: file.rs
src/api/users/: user_repos.rs
src/internal/: async_runtime.rs  concurrent.rs  http_client.rs  jwt.rs  mod.rs  sync.rs
src/service/middleware/: retry.rs
src/service/middleware/cache/: mem.rs
tests/: actions_add_selected_repo_to_org_secret_test.rs  actions_delete_workflow_run_logs_test.rs  actions_remove_selected_repo_from_org_secret_test.rs  actions_self_hosted_runners.rs  actions_workflows_dispatches_test.rs  check_suites.rs  classroom_assignments_tests.rs  classroom_classrooms_tests.rs  code_scanning_alert_update_test.rs  code_scanning_alerts_list_test.rs  code_scanning_analysis_test.rs  codes_of_conduct_tests.rs  commit_associated_check_runs_tests.rs  current_user_orgs_test.rs  dependabot_alerts_test.rs  events_test.rs  follow_redirect.rs  generate_release_notes_test.rs  gists_test.rs  hooks_delivery_list.rs  interactions.rs  issues_check_assignee_test.rs  issues_comments_delete_test.rs  issues_comments_reactions_delete_test.rs  issues_labels_delete_test.rs  issues_locking_test.rs  issues_reactions_delete_test.rs  jwt_test.rs  mock_error.rs  notifications_threads_test.rs  org_copilot_billing_seat_modifications_tests.rs  org_copilot_billing_seats_tests.rs  org_copilot_billing_tests.rs  org_copilot_metrics_tests.rs  org_installations_test.rs  org_members_tests.rs  org_secrets_test.rs  projects_org_create_project_test.rs  projects_org_list_projects_test.rs  projects_project_delete_test.rs  (+35 more)
tests/fixtures/: test_key.pem  test_key.rs  test_key_pkcs1.pem
